<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <GVL Name="OP50_HMI_GVL" Id="{2162dd47-314e-4726-a612-d8d9687a98c7}">
    <Declaration><![CDATA[
VAR_GLOBAL
	
OP50_HMI_Reset:						    BOOL;
SR50_Vert_servo_ctrl:Servo_Control;
SR50_Vert_servo_status:stManualModeAxis;

SR50_Hori_servo_ctrl:Servo_Control;
SR50_Hori_servo_status:stManualModeAxis;


SR50_Conv_servo_ctrl:Servo_Control;
SR50_Conv_servo_status:stManualModeAxis;


OP50_GIUDE_GRP_Manual_Axis: stManualModeAxis; 
OP50_GIUDE_GRP_ctrl: Servo_Control;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>